unix/lang/tests/error/explicit_error_within_short_if.yab
#expect#---Error: error
#expect#---Error: Program stopped due to an error
if (2>1) error "error"
